force-app/main/default/objects/Product2/fields/Tier_3_Group__c.field-meta.xml
<CustomField>
        <fullName>Tier_3_Group__c</fullName>
        <label>Tier 3 Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACAS</fullName>
                </value>
                <value>
                    <fullName>ACC</fullName>
                </value>
                <value>
                    <fullName>ADD</fullName>
                </value>
                <value>
                    <fullName>ADM</fullName>
                </value>
                <value>
                    <fullName>ADVT</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>ASE</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BOA</fullName>
                </value>
                <value>
                    <fullName>BOT</fullName>
                </value>
                <value>
                    <fullName>BOV</fullName>
                </value>
                <value>
                    <fullName>BSL2</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CAA</fullName>
                </value>
                <value>
                    <fullName>CAE</fullName>
                </value>
                <value>
                    <fullName>CAF</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>CLM</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>COM</fullName>
                </value>
                <value>
                    <fullName>COMM</fullName>
                </value>
                <value>
                    <fullName>COMMF</fullName>
                </value>
                <value>
                    <fullName>COMP</fullName>
                </value>
                <value>
                    <fullName>CONFM</fullName>
                </value>
                <value>
                    <fullName>CR</fullName>
                </value>
                <value>
                    <fullName>CRVAR</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>