force-app/main/default/objects/Product2/fields/Transactional__c.field-meta.xml
<CustomField>
        <fullName>Transactional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a product is transactional or not.</description>
        <label>Transactional</label>
        <type>Checkbox</type>
    </CustomField>