force-app/main/default/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Funded Extension Development - Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Funded Extension Development - Time &amp; Materials</fullName>
                </value>
                <value>
                    <fullName>Funded Development Road Map Accel - FP</fullName>
                </value>
                <value>
                    <fullName>Funded Development Road Map Accel - T&amp;M</fullName>
                </value>
                <value>
                    <fullName>PS Other Fixed Price</fullName>
                </value>
                <value>
                    <fullName>PS Other Time &amp; Materials</fullName>
                </value>
                <value>
                    <fullName>Premium Support - FP</fullName>
                </value>
                <value>
                    <fullName>Premium Support - T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>PS Product</fullName>
                </value>
                <value>
                    <fullName>FED-FP Funded Extension Development FP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>