force-app/main/default/objects/Product2/fields/UPID__c.field-meta.xml
<CustomField>
        <fullName>UPID__c</fullName>
        <label>UPID</label>
        <length>7</length>
        <type>Text</type>
    </CustomField>