force-app/main/default/objects/Product2/fields/Uplift_Required__c.field-meta.xml
<CustomField>
        <fullName>Uplift_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uplift Required</label>
        <type>Checkbox</type>
    </CustomField>