force-app/main/default/objects/Product2/fields/Use_on_Case__c.field-meta.xml
<CustomField>
        <fullName>Use_on_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use on Case?</label>
        <type>Checkbox</type>
    </CustomField>