force-app/main/default/objects/Product2/fields/Weighted_RPA__c.field-meta.xml
<CustomField>
        <fullName>Weighted_RPA__c</fullName>
        <label>Weighted RPA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>